# starward

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  ROADMAP.md  blog.html  docs.html  index.html  pyproject.toml  search-index.json  search.html  sitemap.xml
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
assets/css/: styles.9fcc7cdd.css
assets/js/: 0058b4c6.31a1ffd0.js  01a85c17.af0de0dc.js  035337dc.1a35a0b0.js  05278910.653e618f.js  0dc8cd48.b98ac9c9.js  138e0e15.e0712857.js  17896441.03568c55.js  18d983df.a3df2d93.js  191e5478.c0fa9b3e.js  19e5bf00.9c61f9b7.js  1a4e3797.48194246.js  1df93b7f.0ce809bf.js  2215495d.d780c5d1.js  2250c787.74e66b8b.js  235eba00.80ad236b.js  299a8b90.b8a0750e.js  2a118937.055cb28a.js  355b13cf.8e8650bb.js  35946e08.531acc68.js  3608ca53.d6915689.js  36994c47.79db98e5.js  3a2db09e.8a153e52.js  3de3b59b.edb1df38.js  3f751117.96be5345.js  4138cd37.9916753d.js  417f114f.e12cf7e4.js  489.84d0f710.js  4b489098.24780509.js  5078.95ef29f5.js  5604eb74.aa146411.js  5741.ea360209.js  5e95c892.c0347ee7.js  602d22cd.e60f550c.js  616.6bd8c16d.js  621db11d.38eae0c2.js  63.434e61da.js  6577.1583f1d4.js  66b3ee60.d334d8cb.js  676c2ddc.7ea58299.js  6875c492.9f221997.js  (+44 more)
blog/: allure-reporting.html  archive.html  atom.xml  authors.html  deep-sky.html  first-light.html  planetary-motion.html  rss.xml  steady-tracking.html  tags.html
blog/tags/: documentation.html  release.html  testing.html
docs/: CNAME  _sidebar.md  cli-reference.md  coords.md  ecosystem-analysis.html  getting-started.md  index.md  intro.md  planets.md  time.md
docs/cli-reference/: coords.html  coords.md  deep-sky.html  finder.html  lists.html  overview.html  overview.md  planets.html  planets.md  reference.html  reference.md  stars.html  stars.md  sun-moon.html  sun-moon.md  time.html  time.md
docs/development/: cheatsheet.html  contributing.html  dependencies.html  license.html  maintainers.html  overview.html  testing.html
docs/getting-started/: installation.html  installation.md  quickstart.html  quickstart.md
docs/guides/: precision.html  precision.md  verbose.html  verbose.md
docs/module-guides/: _category_.json  angles.html  angles.md  catalogs.html  constants.html  constants.md  coords.html  coords.md  finder.html  lists.html  moon.html  moon.md  observer.html  observer.md  planets.html  planets.md  sun.html  sun.md  time.html  time.md  visibility.html  visibility.md
docs/python-api/: _category_.json  modules.html  modules.md  overview.html  overview.md  reference.html  reference.md
src/astr0/: __init__.py
src/astr0/cli/: __init__.py  angles_cmd.py  constants_cmd.py  coords_cmd.py  moon_cmd.py  observer_cmd.py  sun_cmd.py  time_cmd.py  vis_cmd.py
src/astr0/core/: __init__.py  angles.py  constants.py  coords.py  precision.py  time.py
src/astr0/output/: __init__.py  formatters.py
src/astr0/verbose/: __init__.py
src/starward/: __init__.py
src/starward/cli/: __init__.py  messier_cmd.py  planets_cmd.py  stars_cmd.py
src/starward/core/: caldwell.py  hipparcos.py  hipparcos_types.py  ic.py  messier.py  ngc.py  ngc_types.py
src/starward/output/: console.py  formatters.py
tests/: __init__.py  conftest.py  test_angles.py  test_cli.py  test_constants.py  test_coords.py  test_time.py
tests/cli/: __init__.py  test_commands.py
tests/core/: __init__.py  test_angles.py  test_caldwell.py  test_constants.py  test_coords.py  test_finder.py  test_hipparcos.py  test_ic.py  test_lists.py  test_messier.py  test_moon.py  test_ngc.py  test_observer.py  test_planets.py  test_precision.py  test_sun.py  test_time.py  test_visibility.py
tests/integration/: test_workflows.py
tests/output/: __init__.py  test_formatters.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2026-01-12-deep-sky.md  2026-01-13-allure-reporting.md  authors.yml
website/scripts/: generate-og-image.js
website/src/css/: custom.css  custom.scss
website/src/css/base/: _elements.scss  _infima-overrides.scss  _typography.scss
website/src/css/components/: _admonitions.scss  _announcement-bar.scss  _breadcrumbs.scss  _code-blocks.scss  _footer.scss  _navbar.scss  _pagination.scss  _search.scss  _toc.scss  (+2 more)
website/static/: CNAME  site.webmanifest
(+5 files in other folders)
