[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astr0"
version = "0.1.0"
description = "A professional astronomy calculation toolkit with a soul"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "astr0 contributors" }
]
keywords = [
    "astronomy",
    "astrophysics",
    "coordinates",
    "celestial",
    "calculations",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
astr0 = "astr0.cli:main"

[project.urls]
Homepage = "https://github.com/astr0/astr0"
Documentation = "https://github.com/astr0/astr0#readme"
Repository = "https://github.com/astr0/astr0"

[tool.hatch.build.targets.wheel]
packages = ["src/astr0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=astr0 --cov-report=term-missing"
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/astr0"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
