[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starward"
version = "0.4.1"
description = "A professional astronomy calculation toolkit with a soul"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "starward contributors" }
]
keywords = [
    "astronomy",
    "astrophysics",
    "coordinates",
    "celestial",
    "calculations",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "allure-pytest>=2.13.0",
]

[project.scripts]
starward = "starward.cli:main"

[project.urls]
Homepage = "https://starward.dev"
Documentation = "https://starward.dev/docs/"
Repository = "https://github.com/oddurs/starward"

[tool.hatch.build.targets.wheel]
packages = ["src/starward"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default: clean output without coverage spam
# Use -v for verbose, --cov for coverage
# Allure results generated automatically; use --clean-alluredir to reset
addopts = "-q --tb=short --alluredir=allure-results"
pythonpath = ["src"]
# Test collection display
console_output_style = "progress"
# Shorter traceback by default
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/starward"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
